--- a/options.html
+++ b/options.html
@@ -532,7 +532,7 @@
 
                         container.input("checkbox", {
                             option: "undo.select-tabs",
-                            text: "De/select tabs"
+                            text: "Un/select tabs"
                         });
 
                         container.input("checkbox", {
