--- a/options.html
+++ b/options.html
@@ -250,13 +250,14 @@
 
                     //container.indent(function (container) {
                         container["DOM.Element"].appendChild(UI.create("iframe", function (element) {
-                            element.style.border = "1px solid black";
+                            //element.style.border = "1px solid black";
+                            element.style.border = "none";
                             element.style.width = "600px";
                             element.style.height = "447px";
                             element.style.margin = "0px";
                             element.style.padding = "0px";
                             element.style.marginTop = "10px";
-                            element.src = "theme/window-viewer.html";
+                            element.src = "themes/window-viewer.html";
                         }));
                     //});
                     /*container.input("dropdown-list", {
