Update issue 5 Status: Pending
Undo has been implemented. There are still a couple bugs, and one
missing feature, but those are handled by separate issues.

--- a/background.html
+++ b/background.html
@@ -28,7 +28,7 @@
             "undo.new-tab": true,
             "undo.rename-window": true,
             "undo.select-tabs": true,
-            "undo.move-tabs": false,
+            "undo.move-tabs": true,
             "undo.close-tabs": false,
 
             "color.theme": "blue",
