--- a/options.html
+++ b/options.html
@@ -541,8 +541,7 @@
 
                         container.input("checkbox", {
                             option: "undo.move-tabs",
-                            text: "Moving tabs",
-                            disabled: true
+                            text: "Moving tabs"
                         });
 
                         container.input("checkbox", {
