--- a/background.html
+++ b/background.html
@@ -31,7 +31,7 @@
             "undo.move-tabs": true,
             "undo.close-tabs": false,
 
-            "color.theme": "blue",
+            "color.theme": "Blue",
 
             "usage-tracking": true
         };
