--- a/options.html
+++ b/options.html
@@ -212,37 +212,37 @@
                         list: [{
                             group: "Color:",
                             list: [{
-                                value: "blue",
+                                value: "Blue",
                                 text: "Blue"
                             }, {
-                                value: "green",
+                                value: "Green",
                                 text: "Green"
                             }, {
-                                value: "yellow",
+                                value: "Yellow",
                                 text: "Yellow"
                             }, {
-                                value: "orange",
+                                value: "Orange",
                                 text: "Orange"
                             }, {
-                                value: "red",
+                                value: "Red",
                                 text: "Red"
                             }, {
-                                value: "pink",
+                                value: "Pink",
                                 text: "Pink"
                             }, {
-                                value: "purple",
+                                value: "Purple",
                                 text: "Purple"
                             }]
                         }, {
                             group: "Grayscale:",
                             list: [{
-                                value: "black",
+                                value: "Black",
                                 text: "Black"
                             }, {
-                                value: "grey",
+                                value: "Grey",
                                 text: "Grey"
                             }, {
-                                value: "white",
+                                value: "White",
                                 text: "White"
                             }]
                         }]
