Issue 14: Initial infrastructure for better visual feedback.

--- a/window.html
+++ b/window.html
@@ -167,7 +167,16 @@
             }),
             placeholder: UI.create("div", function (container) {
                 container.id = "placeholder";
-            })
+            })/*,
+            dragBox: UI.create("div", function (element) {
+                element.style.width = "380px";
+                element.style.height = "auto";
+                element.style.cssFloat = "left";
+                element.style.padding = "2px";
+                element.style.overflow = "hidden";
+                element.style.backgroundColor = "transparent";
+                element.style.height = "100px";
+            })*/
         };
 
         Options.setDefaults({
