I should still consider changing the undo bar's behavior, but this is a good enough start.
Update issue 36
Status: Pending

--- a/background.html
+++ b/background.html
@@ -31,6 +31,8 @@
             "undo.move-tabs": true,
             "undo.close-tabs": false,
 
+            "undo.timer": 10,
+
             "color.theme": "Blue",
 
             "usage-tracking": true
