I'm going to try using localStorage rather than Options, due to some weird sync issues.
Update issue 33
Status: Pending

--- a/background.html
+++ b/background.html
@@ -223,6 +223,10 @@
                 }
             }
         }, true);
+
+        Platform.message.addEventListener("lib.remover", function (json, port) {
+            Platform.tabs.remove(port.tab.id);
+        }, true);
     </script>
 </body>
 </html>
