This adds in a new options category "Tabs", and also fixes issue 41. However, this functionality is disabled right now, until I've done some visual cleanup.

--- a/background.html
+++ b/background.html
@@ -35,6 +35,8 @@
 
             "color.theme": "Blue",
 
+            "tabs.close.location": "right",
+
             "usage-tracking": true
         };
         Options.setDefaults(defaults);
