--- a/options.html
+++ b/options.html
@@ -520,6 +520,21 @@
 
                 //container.separator();
 
+                /*container.category("Tabs", function (container) {
+                    container.input("dropdown-list", {
+                        option: "tabs.close.location",
+                        text: "Show the <img src='images/button-close.png' /> button on the ",
+                        list: [{
+                            value: "right",
+                            text: "right"
+                        }, {
+                            value: "left",
+                            text: "left"
+                        }],
+                        unit: " side of the tab."
+                    });
+                });*/
+
                 container.category("Undo", function (container) {
                     container.header("Show undo bar after:");
 
