Changing the default hotkey to Ctrl+Shift+E
Used to be Ctrl+Shift+O

--- a/background.html
+++ b/background.html
@@ -23,7 +23,7 @@
             "popup.hotkey.ctrl": true,
             "popup.hotkey.shift": true,
             "popup.hotkey.alt": false,
-            "popup.hotkey.letter": "O",
+            "popup.hotkey.letter": "E",
 
             "undo.new-tab": true,
             "undo.rename-window": true,
