Update issue 42 Status: Pending

--- a/background.html
+++ b/background.html
@@ -30,12 +30,12 @@
             "undo.select-tabs": true,
             "undo.move-tabs": true,
             "undo.close-tabs": false,
-
             "undo.timer": 10,
 
             "color.theme": "Blue",
 
             "tabs.close.location": "right",
+            "tabs.close.display": "hover",
 
             "usage-tracking": true
         };
